# CaloSHiP_Standalone

./: CMakeLists.txt  run.mac  vis.mac
src/: ActionInitialization.cc  ActionInitialization.hh  DetectorConstruction.cc  DetectorConstruction.hh  DetectorMessenger.cc  DetectorMessenger.hh  EventAction.cc  EventAction.hh  High_Precision_Fibre_layer.cc  High_Precision_Fibre_layer.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.cc  PrimaryGeneratorMessenger.hh  RootIO.cc  RootIO.hh  RunAction.cc  RunAction.hh  SteppingAction.cc  SteppingAction.hh  Thin_layers.cc  Thin_layers.hh  Wide_layers.cc  Wide_layers.hh  main.cc
